<resources>
    <string name="app_name">Kalkulyator</string>ng>
    <string name="foiz">%</string>
    <string name="boluv">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>/
    <string name="_9">9</string>
    <string name="kopaytiruv">×</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="ayirish">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="nuqta">.</string>
    <string name="teng">=</string>
    <string name="qavs1">(</string>
    <string name="qavs2">)</string>
    <string name="backSpace">⌫</string>
    <string name="todo">TODO</string>
</resources>