<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:columnCount="6"
        android:rowCount="5"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="95dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="?attr/white"
            android:fontFamily="@font/g_light"
            android:text="@string/backSpace"
            android:textColor="?attr/maxsusTugmalar"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonQavs1"
            android:layout_width="wrap_content"
            android:layout_height="95dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="?attr/white"
            android:fontFamily="@font/g_light"
            android:text="@string/qavs1"
            android:textColor="?attr/maxsusTugmalar"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonQavs2"
            android:layout_width="wrap_content"
            android:layout_height="95dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="?attr/white"
            android:fontFamily="@font/g_light"
            android:text="@string/qavs2"
            android:textColor="?attr/maxsusTugmalar"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDivision"
            android:layout_width="wrap_content"
            android:layout_height="95dp"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="?attr/white"
            android:fontFamily="@font/g_light"
            android:text="@string/boluv"
            android:textColor="?attr/maxsusTugmalar"
            android:textSize="25sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="95dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="?attr/white"
            android:fontFamily="@font/g_light"
            android:text="@string/_7"
            android:textColor="?attr/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="95dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="?attr/white"
            android:fontFamily="@font/g_light"
            android:text="@string/_8"
            android:textColor="?attr/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="95dp"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="?attr/white"
            android:fontFamily="@font/g_light"
            android:text="@string/_9"
            android:textColor="?attr/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="wrap_content"
            android:layout_height="95dp"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="?attr/white"
            android:fontFamily="@font/g_light"
            android:text="@string/kopaytiruv"
            android:textColor="?attr/maxsusTugmalar"
            android:textSize="25sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="95dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="?attr/white"
            android:fontFamily="@font/g_light"
            android:text="@string/_4"
            android:textColor="?attr/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="95dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="?attr/white"
            android:fontFamily="@font/g_light"
            android:text="@string/_5"
            android:textColor="?attr/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="95dp"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="?attr/white"
            android:fontFamily="@font/g_light"
            android:text="@string/_6"
            android:textColor="?attr/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="wrap_content"
            android:layout_height="95dp"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="?attr/white"
            android:fontFamily="@font/g_light"
            android:text="@string/ayirish"
            android:textColor="?attr/maxsusTugmalar"
            android:textSize="25sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="95dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="?attr/white"
            android:fontFamily="@font/g_light"
            android:text="@string/_1"
            android:textColor="?attr/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="95dp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="?attr/white"
            android:fontFamily="@font/g_light"
            android:text="@string/_2"
            android:textColor="?attr/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="95dp"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="?attr/white"
            android:fontFamily="@font/g_light"
            android:text="@string/_3"
            android:textColor="?attr/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="wrap_content"
            android:layout_height="95dp"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="?attr/white"
            android:fontFamily="@font/g_light"
            android:text="@string/plus"
            android:textColor="?attr/maxsusTugmalar"
            android:textSize="25sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="95dp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="?attr/white"
            android:fontFamily="@font/g_light"
            android:text="@string/_0"
            android:textColor="?attr/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDot"
            android:layout_width="wrap_content"
            android:layout_height="95dp"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:background="?attr/white"
            android:fontFamily="@font/g_light"
            android:text="@string/nuqta"
            android:textColor="?attr/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonEqual"
            android:layout_width="wrap_content"
            android:layout_height="95dp"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="?attr/tengOrange"
            android:fontFamily="@font/g_light"
            android:text="@string/teng"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold" />


    </GridLayout>

</RelativeLayout>